fix: fixing buttons align

--- a/src/global.css
+++ b/src/global.css
@@ -23,7 +23,7 @@
 button {
   cursor: pointer;
   display: flex;
-  justify-content: center;
+  align-items: center;
 }
 body {
   -webkit-font-smoothing: antialiased;
